--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,64 @@
     transform: rotate(360deg);
   }
 }
+.app {
+  text-align: center;
+}
+
+input {
+  padding: 4px;
+  margin-right: 8px;
+}
+
+
+ul {
+  /* Remove bullet point  */
+  list-style: none;
+}
+
+li {
+  margin: 12px 0;
+}
+
+.delete-button {
+  font-size: 10px;
+  margin-left: 8px;
+
+  border-radius:50% ;
+  color: white;
+ 
+
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+button{
+  height: 50px;
+  width:150px;
+  color: black;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 20px;
+  background-color: white;
+  border-radius: 50%;
+}
+img{
+  width:350px;
+  height:350px;
+  margin-left:2px;
+}
+input[type=text]
+{
+  margin-left: 30px;
+  height: 40px;
+  width:200px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 24px;
+  color: black;
+  background-color: white;
+}
+.box{
+  width: 300px;
+  border: 10px solid orangered;
+  padding: 50px;
+  margin: 20px;
+
+}
